*** 20011201_1 by leeh
- $irc.server -> $$irc.server
- #host.mask -> $#host.mask


*** 20011130_1 by db
- remove BOTCHECK.
  It is obsolete in todays efnet world. Its functionality is replaced
  by X lines anyway.



*** 20011129_16 by wcampbel
Corrected the application of the TKLINE expire patch, apparently diff
created two sections that looked identical.


*** 20011129_15 by db
- committed hwy's tkline expire patch



*** 20011129_14 by wcampbel
RESTART now requires the server name (like die)
A few small doc changes


*** 20011129_13 by wcampbel
Updated dependencies


*** 20011129_12 by androsyn
Added mmap() goodness to blalloc.c


*** 20011129_11 by wcampbel
Update opers.txt documentation again.


*** 20011129_10 by db
Lee is right. /stats j should be /stats q like hybrid-7. done deal.
Also removed the unnecessary (char *) cast on the NULLs in the message tables



*** 20011129_9 by db
- Adds /stats F /stats J
  added proper RPL_STATSJLINE in numerics.h and in messages.tab
  messages_cust.tab



*** 20011129_8 by wcampbel
Revise docs for the latest flurry of commits.  I still need more testing
on a couple things, but it's pretty close


*** 20011129_7 by db
- Applied stats j patch



*** 20011129_6 by db
- applied jvs m_pong.c patch
- removed unnecessary clock failure test



*** 20011129_5 by db
- committed tobys undline/ungline patch



*** 20011129_4 by db
- minor formatting changes in s_conf.c
  plus removed annoying "noise" 
- stats r fix submitted by jv



*** 20011129_3 by db
- fixed order of STATS Q line



*** 20011129_2 by db
- fixed numeric orders. Apparently someone had already fixed KLINE



*** 20011129_1 by db
- since the old code did a ++addr_count then compared to RES_MAXADDRS,
  it would not find any ip's, depending on the compilers interpretation
  of sequence points. Its quite possible, it would have resolved on sunpro
  compiler, but it sure does not on freebsd gcc.



*** 20011128_1 by lusky
- revved patchlevel to 6.2.1rc2