@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h,v 1.139 2001/10/25 16:28:14 leeh Exp $
+ * $Id: config.h,v 1.140 2001/11/30 08:00:18 db Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -319,8 +319,11 @@
  * If KLINE_WITH_CONNECTION_CLOSED is defined and KLINE_WITH_REASON
  * above is undefined then the signoff reason will be "Connection
  * closed". This prevents other users seeing the client disconnect
- * from harassing the IRCops.
- * However, the client will still see the real reason upon connect attempts.
+ * from harassing the IRCops.  The client will not see the reason.
+ *
+ * However, if KLINE_WITH_CONNECTION_CLOSED and KLINE_WITH_REASON
+ * are both defined, the client will still see the real reason on
+ * connect attempts.
  */
 #define KLINE_WITH_CONNECTION_CLOSED
 
