@@ -1,3 +1,12 @@
+*** 20011203_2 by androsyn
+Directory /cvsroot/ircd-hybrid-6/adns added to the repository
+
+
+*** 20011203_1 by wcampbel
+Correction in the documentation of KLINE_WITH_CONNECTION_CLOSED,
+thanks Kindred.
+
+
 *** 20011201_1 by leeh
 - $irc.server -> $$irc.server
 - #host.mask -> $#host.mask
